--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section>
 	<div class="conteiner-xxl" id="conteiner">
 		<div class="row">
-			<div class="col-xxl-6 col-lg-3 col-md-12 col-xs-12 " id="Text__Col">
+			<div class="col-xxl-6 col-lg-6 col-md-12 col-xs-12 " id="Text__Col">
 				<div class="conteiner__inner">
 					<h1 class="Title">Apple iPad</h1>
 					<h2 class="Sub__Title">Reviews</h2>
@@ -55,10 +55,10 @@
 		<div class="col-xxl-4 col-lg-4 col-md-12 col-xs-12 d-flex justify-content-end">
 			<img class="img-fluid " src="img/Layer 14.png" alt="layer">
 		</div>	
-		<div class="col-xxl-4 col-lg-4 col-md-12 col-xs-12" style="padding-left: 1%">
+		<div class="col-xxl-4 col-lg-4 col-md-12 col-xs-12 d-flex justify-content-center" style="padding-left: 1%">
 				<div class="" style="width: 350px">
-				<h3>Lorem ipsum dolor sit amet.</h3>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo ullam dicta molestias dolore doloribus illum, quam rerum laborum reiciendis praesentium eum ab labore numquam maiores et distinctio ipsum ad nesciunt exercitationem neque quisquam blanditiis beatae. Atque deleniti amet distinctio vero, quasi in fugiat officiis, rem eius, fuga optio iste sint!</p>
+				<h3 style="font-size: 30px; color: #696161">Lorem ipsum dolor sit amet.</h3>
+				<p style="font-size: 14px; color: #848484">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo ullam dicta molestias dolore doloribus illum, quam rerum laborum reiciendis praesentium eum ab labore numquam maiores et distinctio ipsum ad nesciunt exercitationem neque quisquam blanditiis beatae. Atque deleniti amet distinctio vero, quasi in fugiat officiis, rem eius, fuga optio iste sint!</p>
 				</div>
 		
 	</div>
@@ -70,22 +70,109 @@
 </section>
 
 <section>
-	<div class="conteiner-xxl">
+	<div class="conteiner-xxl" style="margin-top: 70px;">
 		<div class="row">
-			<div class="col-xxl-4 col-lg-4 col-md-12 col-xs-12 ">
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">Apple i phone variations </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Mariya</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
 			</div>
-</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">The standard chunk Lorem Ipsum </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">This book is one of treatise ethics</h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-3 col-lg-3 col-md-12 col-xs-12 ">
+				<img class="img-fluid" src="img/Без имени-2.png" alt="HZ2">		
+			</div>
+		</div>
 	</div>
-
 </section>
 
-<style>
+<section>
+	<div class="conteiner-xxl" style="margin-top: 70px;">
+		<div class="row">
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">Apple i phone variations </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Mariya</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">The standard chunk Lorem Ipsum </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">This book is one of treatise ethics</h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-3 col-lg-3 col-md-12 col-xs-12 "style="padding-top: 15px; background-color:#393a39 ">
+<div class="mb-3">
+	<h3 style="color: #fff; font-size: 27px; font-weight: 300; text-align: center;">Join our mailing</h3>
+	<p style="color: #fff; font-size: 16px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum </p>
+  <label for="formGroupExampleInput" class="form-label"></label>
+  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="name">
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label"></label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="email adress">
+</div>
+<div class="d-grid gap-3 col-8 mx-auto">
+  <button type="button" class="btn" data-mdb-ripple-color="#ffffff" style="background-color:#bb4465; color: #fff; margin-bottom: 10%; "> SING ME UP! </button>
+</div>
+</div>
+</div>
+</div>
+  
+</div>
+</section>
+
+<div class="conteiner-xxl">
+		<div class="row">
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">Apple i phone variations </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Mariya</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">The standard chunk Lorem Ipsum </h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+			<div class="col-xxl-2 col-lg-3 col-md-12 col-xs-12 ">
+				<h3 style="font-size: 26px; color:#696161">This book is one of treatise ethics</h3>
+				<h2 style="font-size: 14px; color:#848484">30/12/12   By : Andriana Solorzana</h2>
+				<p class="text-justify" style="font-size: 14px; color:#848484">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
+			</div>
+<footer style="background-color: #393a39">
+  		<div class="container-xxl ">
+  			<div class="row d-flex justify-content-center">
+    		
+    <ul class="conteiner-fluid" id="footer__menu">
+	<li><h4 style= "font-size: 16px; color:#fff">All Rights Reserved to cssauthor.com</h4></li>
+	<li><a class="nav__link" href="#"><i class="fab fa-facebook-square fa-lg" style="color: #ffffff"></i></a></li>
+	<li><a class="nav__link" href="#"><i class="fab fa-twitter-square fa-lg" style="color: #ffffff"></i></a></li>
+	<li><a class="nav__link" href="#"><i class="fab fa-youtube-square fa-lg" style="color: #ffffff"></i></a></li>
+	
+</ul>
+</div>
+</div>
+</footer>
+
+<!-- <style>
   .row>*{
     padding: 0px;
     margin: 0px;
   }
-</style>
+</style> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 
 	
 </body>
